<resources>
    <string name="app_name">MVP</string>
    <string name="tv1">TIMECO</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="button">ENTRAR</string>
    <string name="tv_inicio">INICIO DE LA JORNADA</string>
    <string name="number">00</string>
    <string name="points">:</string>
    <string name="tv_fin">FINAL DE LA JORNADA</string>
    <string name="tv_pausa">DESCANSO (OPCIONAL)</string>
    <string name="button_reg">ACEPTAR</string>
    <string name="title_activity_menu_view">MenuView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="registros">VER REGISTROS</string>
    <string name="gestion">GESTIÓN DE PERSONAL</string>
    <string name="opciones">OPCIONES</string>
    <string name="menu_home">MENÚ</string>
    <string name="menu_gallery">GALLERY</string>

    <string name="tv_nombre">NOMBRE DE LA EMPRESA</string>
    <string name="etxt_nombre">Escriba un nombre</string>
    <string name="tv_logo">IMAGEN DE LA EMPRESA</string>
</resources>
