<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <EditText
        android:id="@+id/etxt_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="148dp" />

    <EditText
        android:id="@+id/etxt_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="283dp" />

    <EditText
        android:id="@+id/etxt_pausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="430dp" />

    <TextView
        android:id="@+id/tv_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_inicio"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="107dp" />

    <TextView
        android:id="@+id/tv_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fin"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="245dp" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reg"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="547dp" />

    <TextView
        android:id="@+id/tv_pausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pausa"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="391dp" />
</androidx.constraintlayout.widget.ConstraintLayout>